--- a/styles/gas-app-scope.sass
+++ b/styles/gas-app-scope.sass
@@ -27,7 +27,9 @@ $gas-app-ids: '#foundryvtt-actor-studio-pc-sheet', '#foundryvtt-actor-studio-wel
       // background-color: var(--gas-sheet-background, #1a1a1a) !important
 
       > .window-content
-        background: url("../modules/foundryvtt-actor-studio/assets/black-parchment.webp")
+        background: url("/modules/foundryvtt-actor-studio/assets/black-parchment.webp")
+        background-repeat: repeat
+        background-size: contain
         // background-color: var(--gas-sheet-background, #1a1a1a) !important
         // background-image: none !important
         // backdrop-filter: none !important
